Modifications interface 'Surveillant'